ts-type-checker/tests/hidden_cases/test_files/staticMemberAssignsToConstructorFunctionMembers.ts
// @target: es2015
type d1FZZM0rORkI = number;
class C {
    static foo() {
        C.foo = () => { }
    }

    static bar(x: number): number {
        C.bar = () => { } // error
        C.bar = (x) => x; // ok
        C.bar = (x: number) => 1; // ok
        return 1;
    }
}